--- a/view/doc.scss
+++ b/view/doc.scss
@@ -56,8 +56,9 @@ header {
 
 #logo {
   height: 50px;
-  float: right;
-  margin-right: $space;
+  /*float: right;*/
+  /*margin-right: $space;*/
+  margin-left: $space;
 }
 
 #toc {
