--- a/view/index.html
+++ b/view/index.html
@@ -2,7 +2,7 @@
 <html> 
   <head>
     <meta charset="utf-8">
-    <title>APTO API</title>
+    <title>Doctor</title>
     <link rel="stylesheet"
       href="jquery-ui/css/dark-hive/jquery-ui-1.8.16.custom.css"/>
     <link rel="stylesheet" href="doc.css"/>
@@ -13,8 +13,7 @@
   </head>
   <body>
     <header>
-      <span class="title">APTO API</span>
-      <img id="logo" src="images/apto_small.jpg" alt="logo"/>
+      <span class="title">Doctor</span>
     </header>
     <div id="center">
       <nav id="toc"></nav>
