--- a/view/doc.css
+++ b/view/doc.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @font-face {
   font-family: title;
   /*src: url('fonts/kulminoituva.ttf');*/
@@ -32,7 +31,7 @@ header {
   height: 500px;
   padding-bottom: 10px;
   /* to make panels same height */
-  width: 75%; }
+  width: 70%; }
 
 #logo {
   height: 50px;
@@ -50,7 +49,7 @@ header {
   float: left;
   height: 500px;
   padding-top: 10px;
-  width: 15%; }
+  width: 20%; }
 
 #toc a {
   color: #2e7db2;
@@ -68,11 +67,27 @@ header {
   list-style-type: none;
   padding-left: 0; }
 
-.item {
+.arg {
+  font-family: monospace;
+  font-size: 14pt; }
+
+.contentTitle {
+  font-family: sans-serif;
+  font-size: 24pt;
+  padding-top: 10px; }
+
+.function {
   color: #2e7db2;
   font-family: monospace;
   font-size: 18pt;
-  font-weight: bold;
+  font-weight: bold; }
+
+.item {
+  padding-top: 10px; }
+
+.missing {
+  color: red;
+  font-size: 14pt;
   padding-top: 10px; }
 
 .type {
