--- a/view/doc.scss
+++ b/view/doc.scss
@@ -51,7 +51,7 @@ header {
   float: left;
   height: $centerHeight;
   padding-bottom: $space; /* to make panels same height */
-  width: 75%;
+  width: 70%;
 }
 
 #logo {
@@ -66,7 +66,7 @@ header {
   float: left;
   height: $centerHeight;
   padding-top: $space;
-  width: 15%;
+  width: 20%;
 }
 
 #toc a {
@@ -89,11 +89,31 @@ header {
   padding-left: 0;
 }
 
-.item {
+.arg {
+  font-family: monospace;
+  font-size: 14pt;
+}
+
+.contentTitle {
+  font-family: sans-serif;
+  font-size: 24pt;
+  padding-top: $space;
+}
+
+.function {
   color: $textColor;
   font-family: monospace;
   font-size: 18pt;
   font-weight: bold;
+}
+
+.item {
+  padding-top: $space;
+}
+
+.missing {
+  color: red;
+  font-size: 14pt;
   padding-top: $space;
 }
 
