fixed file copy to copy multiple views

--- a/view/default/index.html
+++ b/view/default/index.html
@@ -19,8 +19,8 @@
       <nav id="toc"></nav>
       <div id="content"></div>
     </div>
-    <footer>
-      &copy; 2011 Elsevier
+    <footer id="footer">
+      Powered by doctor!
     </footer>
   </body>
 </html>
