change grammar to parse param default values add param and return types, param optional flag, param default values to default view default view css changes add more comment tests

--- a/view/default/doc.css
+++ b/view/default/doc.css
@@ -110,7 +110,14 @@ dl.itemTags > dt {
   font-weight: bold; }
 
 span.paramName {
-  font-family: "Courier New", "Courier", monospace; }
+  font-weight: bold; }
+
+dl.param > dd {
+  margin-left: 30px; }
+
+span.types {
+  font-family: "Courier New", "Courier", monospace;
+  font-style: italic; }
 
 div.itemType {
   margin-left: 30px; }
