diplay properties in default view; add class description to default view

--- a/view/default/doc.scss
+++ b/view/default/doc.scss
@@ -109,6 +109,10 @@ header {
   font-weight: bold;
 }
 
+span.label {
+  font-weight: bold;
+}
+
 .item {
   padding-top: $space;
 }
@@ -179,5 +183,20 @@ dl.itemTags > dd {
   margin-left: 60px;
 }
 
+span.classLabel {
+  color: $textColor;
+  font-family: monospace;
+  font-size: 18pt;
+  font-weight: bold;
+  margin-top: 10px;  
+  display: block;
+}
 
+.classDescription {
+  margin-left: $itemLeftMargin;  
+}
+
+.properties {
+  margin-top: 10px;
+}
   
