--- a/view/default/doc.css
+++ b/view/default/doc.css
@@ -153,3 +153,14 @@ span.classLabel {
 
 .properties {
   margin-top: 10px; }
+
+dl.examples {
+  margin-left: 30px; }
+
+dl.examples > dt {
+  font-weight: bold;
+  margin-left: 30px; }
+
+code {
+  font-family: "Courier New", "Courier", monospace;
+  white-space: pre; }
