--- a/view/default/doc.styl
+++ b/view/default/doc.styl
@@ -1,168 +1,215 @@
 @charset 'UTF-8';
+
+$borderColor = blue;
+$centerHeight = 500px;
+$hoverColor = lightgreen;
+$space = 10px;
+$textColor = #2e7db2;
+
 @font-face {
   font-family: title;
-/*src: url('fonts/kulminoituva.ttf');*/
-  src: url("fonts/plexifont.ttf");
+  /*src: url('fonts/kulminoituva.ttf');*/
+  src: url('fonts/plexifont.ttf');
 }
+
+panel() {
+  roundedCorners(15px, black, 1px);
+  background-color: white;
+  color: black;
+  margin: 0 0 $space 1%;
+  padding: 0 $space 0 $space;
+}
+
+roundedCorners($radius, $color, $thickness) {
+  border: solid $color $thickness;
+  border-radius: $radius;
+}
+
 * {
   font-family: Arial, sans-serif;
   margin: 0;
 }
+
 body {
-  background-color: #000;
-  color: #fff;
+  background-color: black;
+  color: white;
 }
+
 footer {
-  border-bottom: solid #2e7db2 1px;
+  border-bottom: solid $textColor 1px;
   clear: left;
-  padding: 10px;
+  padding: $space;
 }
+
 header {
-  padding-left: 10px;
-  padding-top: 10px;
+  padding-left: $space;
+  padding-top: $space;
 }
+
 #content {
-  border: solid #000 1px;
-  border-radius: 15px;
-  background-color: #fff;
-  color: #000;
-  margin: 0 0 10px 1%;
-  padding: 0 10px 0 10px;
+  panel();
   float: left;
-  height: 500px;
+  height: $centerHeight;
   overflow: auto;
-  padding-bottom: 10px;
-/* to make panels same height */
+  padding-bottom: $space; /* to make panels same height */
   width: 70%;
 }
+
 #logo {
   height: 50px;
-/*float: right;*/
-/*margin-right: $space;*/
-  margin-left: 10px;
+  /*float: right;*/
+  /*margin-right: $space;*/
+  margin-left: $space;
 }
+
 #toc {
-  border: solid #000 1px;
-  border-radius: 15px;
-  background-color: #fff;
-  color: #000;
-  margin: 0 0 10px 1%;
-  padding: 0 10px 0 10px;
+  panel();
   float: left;
-  height: 500px;
+  height: $centerHeight;
   overflow: auto;
-  padding-top: 10px;
+  padding-top: $space;
   width: 20%;
 }
+
 #toc a {
-  color: #2e7db2;
+  color: $textColor;
   font-size: 14pt;
   text-decoration: none;
 }
+
 #toc a:hover {
-/*color: $hoverColor;*/
+  /*color: $hoverColor;*/
   text-decoration: underline;
 }
+
 #toc ul {
   list-style-type: disc;
 }
+
 #toc > ul {
   list-style-type: none;
   padding-left: 0;
 }
+
 .arg {
   font-family: monospace;
   font-size: 14pt;
 }
+
 .contentTitle {
   font-family: sans-serif;
   font-size: 24pt;
-  padding-top: 10px;
+  padding-top: $space;
 }
+
 .function {
-  color: #2e7db2;
+  color: $textColor;
   font-family: monospace;
   font-size: 18pt;
   font-weight: bold;
 }
+
 span.label {
   font-weight: bold;
 }
+
 .item {
-  padding-top: 10px;
+  padding-top: $space;
 }
+
 .missing {
-  color: #f00;
+  color: red;
   font-size: 14pt;
-  padding-top: 10px;
+  padding-top: $space;
 }
+
 .selected {
   font-weight: bold;
 }
+
 .type {
-  color: #000;
+  color: black;
 }
+
 .title {
   font-family: title, sans-serif;
   font-size: 48pt;
 }
+
 .itemType {
   font-style: italic;
 }
+
 dl.itemTags > dt {
   font-weight: bold;
 }
+
+$itemTopMargin = 10px;
+$itemLeftMargin = 30px;
+
 span.paramName {
   font-weight: bold;
 }
+
 dl.param > dd {
-  margin-left: 30px;
+  margin-left: $itemLeftMargin;
 }
+
 span.types {
   font-family: "Courier New", "Courier", monospace;
-  font-style: italic;
+  font-style: italic;  
 }
+
 div.itemType {
-  margin-left: 30px;
+  margin-left: $itemLeftMargin;
 }
+
 div.itemDescription {
-  margin-top: 10px;
-  margin-left: 30px;
+  margin-top: $itemTopMargin;
+  margin-left: $itemLeftMargin;
 }
+
 dl.itemTags {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: $itemTopMargin;
+  margin-bottom: $itemTopMargin;
 }
+
 dl.itemTags > dt {
-  margin-top: 10px;
-  margin-left: 30px;
+  margin-top: $itemTopMargin;
+  margin-left: $itemLeftMargin;
 }
+
 dl.itemTags > dd {
   margin-left: 60px;
 }
+
 span.classLabel {
-  color: #2e7db2;
+  color: $textColor;
   font-family: monospace;
   font-size: 18pt;
   font-weight: bold;
-  margin-top: 10px;
+  margin-top: 10px;  
   display: block;
 }
+
 .classDescription {
-  margin-left: 30px;
+  margin-left: $itemLeftMargin;  
 }
+
 .properties {
   margin-top: 10px;
 }
+  
 dl.examples {
-  margin-left: 30px;
+  margin-left: $itemLeftMargin;
 }
+
 dl.examples > dt {
   font-weight: bold;
-  margin-left: 30px;
+  margin-left: $itemLeftMargin;  
 }
+
 code {
   font-family: "Courier New", "Courier", monospace;
   white-space: pre;
 }
-
