--- a/view/default/css/doc.styl
+++ b/view/default/css/doc.styl
@@ -6,10 +6,14 @@ $hoverColor = lightgreen;
 $space = 10px;
 $textColor = #2e7db2;
 
+div.container {
+  padding-top: 30px;
+}
+
 @font-face {
   font-family: title;
   /*src: url('fonts/kulminoituva.ttf');*/
-  src: url('fonts/plexifont.ttf');
+  /*src: url('fonts/plexifont.ttf');*/
 }
 
 panel() {
@@ -31,28 +35,29 @@ roundedCorners($radius, $color, $thickness) {
 }
 
 body {
-  background-color: black;
-  color: white;
+/*  background-color: black;
+  color: white; */
 }
 
 footer {
-  border-bottom: solid $textColor 1px;
+/*  border-bottom: solid $textColor 1px;
   clear: left;
-  padding: $space;
+  padding: $space; */
 }
 
 header {
-  padding-left: $space;
-  padding-top: $space;
+/*  padding-left: $space;
+  padding-top: $space; */
 }
 
 #content {
+/*
   panel();
   float: left;
   height: $centerHeight;
   overflow: auto;
   padding-bottom: $space; /* to make panels same height */
-  width: 70%;
+  width: 70%; */
 }
 
 #logo {
@@ -63,12 +68,12 @@ header {
 }
 
 #toc {
-  panel();
+/*  panel();
   float: left;
   height: $centerHeight;
   overflow: auto;
   padding-top: $space;
-  width: 20%;
+  width: 20%; */
 }
 
 #toc a {
