fix for p tags in param descriptions

--- a/view/default/css/doc.css
+++ b/view/default/css/doc.css
@@ -59,6 +59,9 @@ dd {
 .privateToggle {
   margin: 1em 0;
 }
+* > .param p:last-child {
+  margin-bottom: 0;
+}
 /*
 $borderColor = blue;
 $centerHeight = 500px;
