--- a/view/default/css/doc.styl
+++ b/view/default/css/doc.styl
@@ -79,6 +79,10 @@ dd {
   margin: 1em 0;
 }
 
+* > .param p:last-child {
+    margin-bottom: 0;
+}
+
 /*
 $borderColor = blue;
 $centerHeight = 500px;
