--- a/view/default/css/doc.css
+++ b/view/default/css/doc.css
@@ -13,9 +13,11 @@ html {
   text-align: center;
   margin-bottom: 0.75em;
 }
-#toc a {
+#toc a,
+#toc a:visited {
   color: #2e7db2;
   font-weight: bold;
+  text-decoration: none;
 }
 h1 {
   border-color: #aaa;
@@ -33,6 +35,10 @@ h2 {
 }
 h3 {
   font-size: 1.5em;
+  margin-top: 1em;
+}
+h4 {
+  font-size: 1.25em;
   margin-top: 1em;
 }
 .function {
@@ -62,205 +68,8 @@ dd {
 * > .param p:last-child {
   margin-bottom: 0;
 }
-/*
-$borderColor = blue;
-$centerHeight = 500px;
-$hoverColor = lightgreen;
-$space = 10px;
-$textColor = #2e7db2;
-
-div.container {
-  padding-top: 30px;
+.chevron {
+  width: 10px;
+  padding-right: 2px;
+  display: inline-block;
 }
-
-@font-face {
-  font-family: title;
-}
-
-panel() {
-  roundedCorners(15px, black, 1px);
-  background-color: white;
-  color: black;
-  margin: 0 0 $space 1%;
-  padding: 0 $space 0 $space;
-}
-
-roundedCorners($radius, $color, $thickness) {
-  border: solid $color $thickness;
-  border-radius: $radius;
-}
-
-* {
-  font-family: Arial, sans-serif;
-  margin: 0;
-}
-
-body {
-
-}
-
-footer {
-
-}
-
-header {
-
-}
-
-#content {
-
-}
-
-#logo {
-  height: 50px;
-  margin-left: $space;
-}
-
-#toc {
-
-}
-
-#toc a {
-  color: $textColor;
-  font-size: 14pt;
-  text-decoration: none;
-}
-
-#toc a:hover {
-  text-decoration: underline;
-}
-
-#toc ul {
-  list-style-type: disc;
-}
-
-#toc > ul {
-  list-style-type: none;
-  padding-left: 0;
-}
-
-.arg {
-  font-family: monospace;
-  font-size: 14pt;
-}
-
-.contentTitle {
-  font-family: sans-serif;
-  font-size: 24pt;
-  padding-top: $space;
-}
-
-.function {
-  color: $textColor;
-  font-family: monospace;
-  font-size: 18pt;
-  font-weight: bold;
-}
-
-span.label {
-  font-weight: bold;
-}
-
-.item {
-  padding-top: $space;
-}
-
-.missing {
-  color: red;
-  font-size: 14pt;
-  padding-top: $space;
-}
-
-.selected {
-  font-weight: bold;
-}
-
-.type {
-  color: black;
-}
-
-.title {
-  font-family: title, sans-serif;
-  font-size: 48pt;
-}
-
-.itemType {
-  font-style: italic;
-}
-
-dl.itemTags > dt {
-  font-weight: bold;
-}
-
-$itemTopMargin = 10px;
-$itemLeftMargin = 30px;
-
-span.paramName {
-  font-weight: bold;
-}
-
-dl.param > dd {
-  margin-left: $itemLeftMargin;
-}
-
-span.types {
-  font-family: "Courier New", "Courier", monospace;
-  font-style: italic;  
-}
-
-div.itemType {
-  margin-left: $itemLeftMargin;
-}
-
-div.itemDescription {
-  margin-top: $itemTopMargin;
-  margin-left: $itemLeftMargin;
-}
-
-dl.itemTags {
-  margin-top: $itemTopMargin;
-  margin-bottom: $itemTopMargin;
-}
-
-dl.itemTags > dt {
-  margin-top: $itemTopMargin;
-  margin-left: $itemLeftMargin;
-}
-
-dl.itemTags > dd {
-  margin-left: 60px;
-}
-
-span.classLabel {
-  color: $textColor;
-  font-family: monospace;
-  font-size: 18pt;
-  font-weight: bold;
-  margin-top: 10px;  
-  display: block;
-}
-
-.classDescription {
-  margin-left: $itemLeftMargin;  
-}
-
-.properties {
-  margin-top: 10px;
-}
-  
-dl.examples {
-  margin-left: $itemLeftMargin;
-}
-
-dl.examples > dt {
-  font-weight: bold;
-  margin-left: $itemLeftMargin;  
-}
-
-code {
-  font-family: "Courier New", "Courier", monospace;
-  white-space: pre;
-}
-
-*/
-
